# DC-OCPP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Controller.txt  README.md  TODO.md  Working.md  concat_sources.py  pending_tokens.json
build-rpi/artifacts/share/data/db/: jyotisman.db
build-rpi/artifacts/share/webui/: index.html
cmake/: Finddate.cmake  Findeverest-evse_security.cmake  Findeverest-log.cmake  Findeverest-sqlite.cmake  Findeverest-timer.cmake  Findfsm.cmake  Findlibwebsockets.cmake  Findnlohmann_json.cmake  Findnlohmann_json_schema_validator.cmake
cmake/patches/: everest_timer_duration_cast.patch
cmake/toolchains/: raspberrypi.cmake
configs/: charger.json  ocpp16-config.json
data/db/: jyotisman.db
docker/: Dockerfile.rpi  build-rpi.sh
docs/: CAN_CONTRACT.md  can_contract_constants.json  ccs2_dc_gap_analysis.md  security_pki.md  soak_test_plan.md  waveshare_usb_can_b.md
docs/modules/: SplitCharging.md
include/: can_contract.hpp  can_plc.hpp  charger_config.hpp  hardware_interface.hpp  hardware_sim.hpp  island_manager.hpp  ocpp_adapter.hpp  power_manager.hpp  power_module_controller.hpp
scripts/: build_usbcan_bridge.sh  can_loop_test.sh  gen_can_contract_constants.py  waveshare_usbcan_setup.sh
src/: can_plc.cpp  charger_config.cpp  config_webui.cpp  hardware_sim.cpp  island_manager.cpp  main.cpp  ocpp_adapter.cpp  power_manager.cpp  power_module_controller.cpp
tests/: HIL_PLAN.md  auth_flow_tests.cpp  can_conformance_harness.cpp  can_crc_filter_tests.cpp  can_end_to_end_sim_tests.cpp  can_protocol_vectors_tests.cpp  derate_fault_tests.cpp  deterministic_vectors_tests.cpp  island_manager_tests.cpp  limit_fallback_tests.cpp  pending_token_persistence_tests.cpp  power_manager_invariants_tests.cpp  power_manager_tests.cpp
tools/waveshare_usbcan/: usbcan_bridge  usbcan_bridge.cpp
webui/: app.js  styles.css
